feat: add trajectory main areas analyze